added items and footer

--- a/index.html
+++ b/index.html
@@ -90,34 +90,257 @@
         <div class="wrapper next-row">
             <div class="wid-25 arrange-left">
                 <div class="feature-point">
-                <span class="icon-text-wrap">
-                    <i class="fa-solid fa-check"></i>
-                    <span>Quality Products</span>
-                </span>
-            </div>
-            </div>
-            <div class="wid-25 arrange-left">
-                <div class="feature-point">
-                <span class="icon-text-wrap">
-                    <i class="fa-solid fa-truck-fast"></i>
-                    <span>Free Shipping</span>
-                </span>
+                    <span class="icon-text-wrap">
+                        <i class="fa-solid fa-check"></i>
+                        <span>Quality Products</span>
+                    </span>
                 </div>
             </div>
             <div class="wid-25 arrange-left">
                 <div class="feature-point">
-                <span class="icon-text-wrap">
-                    <i class="fa-solid fa-arrow-right-arrow-left"></i>
-                    <span>14 Days Product Return</span>
-                </span>
+                    <span class="icon-text-wrap">
+                        <i class="fa-solid fa-truck-fast"></i>
+                        <span>Free Shipping</span>
+                    </span>
                 </div>
             </div>
             <div class="wid-25 arrange-left">
                 <div class="feature-point">
-                <span class="icon-text-wrap">
-                    <i class="fa-sharp fa-solid fa-phone-volume"></i>
-                    <span>24/7 Support</span>
-                </span>
+                    <span class="icon-text-wrap">
+                        <i class="fa-solid fa-arrow-right-arrow-left"></i>
+                        <span>14 Days Product Return</span>
+                    </span>
+                </div>
+            </div>
+            <div class="wid-25 arrange-left">
+                <div class="feature-point">
+                    <span class="icon-text-wrap">
+                        <i class="fa-sharp fa-solid fa-phone-volume"></i>
+                        <span>24/7 Support</span>
+                    </span>
+                </div>
+            </div>
+        </div>
+        <div class="wrapper next-row">
+            <div class="wid-33 arrange-left">
+                <div class="category-item">
+                    <div class="product-count">
+                        20 Product
+                    </div>
+                    <div class="category-image">
+                        <img src="images.jpg">
+                    </div>
+                    <div class="category-type">
+                        <h5>Men's Dresses</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="wid-33 arrange-left">
+                <div class="category-item">
+                    <div class="product-count">
+                        20 Product
+                    </div>
+                    <div class="category-image">
+                        <img src="images (1).jpg">
+                    </div>
+                    <div class="category-type">
+                        <h5>Men's Coat</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="wid-33 arrange-left">
+                <div class="category-item">
+                    <div class="product-count">
+                        20 Product
+                    </div>
+                    <div class="category-image">
+                        <img src="images (2).jpg">
+                    </div>
+                    <div class="category-type">
+                        <h5>Men's Blazer</h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="wrapper next-row">
+            <div class="wid-50 arrange-left">
+                <div class="offer-banner">
+                    <img src="offer.webp" alt="offer-banner">
+                    <div class="offer-text">
+                        <h5>30% off the all order</h5>
+                        <h3>Spring Collection</h3>
+                        <button>Shop Now</button>
+                    </div>
+                </div>
+            </div>
+            <div class="wid-50 arrange-left">
+                <div class="offer-banner">
+                    <img src="offer1.jpg" alt="offer-banner" style="    transform: scalex(-1);">
+                    <div class="offer-text">
+                        <h5>20% off the all order</h5>
+                        <h3>Winter Collection</h3>
+                        <button>Shop Now</button>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <div class="wrapper next-row">
+            <div class="wid-25 arrange-left">
+                <div class="cart">
+                    <div class="cart-image">
+                        <img src="5.webp">
+                    </div>
+                    <div class="card-details">
+                        <h6 class="style">Colorful Cloth</h6>
+                        <div class="cloth-price">
+                            <h6 class="current">$123.00</h6>
+                            <h6 class="last">$123.00</h6>
+                        </div>
+                    </div>
+                    <div class="cart-footer">
+                        <a href="#">
+                            <i class="fa-regular fa-eye"></i>View Details
+                        </a>
+                        <a href="#">
+                            <i class="fa-solid fa-cart-shopping"></i>Add to Cart
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="wid-25 arrange-left">
+                <div class="cart">
+                    <div class="cart-image">
+                        <img src="1.jpg">
+                    </div>
+                    <div class="card-details">
+                        <h6 class="style">Colorful Cloth</h6>
+                        <div class="cloth-price">
+                            <h6 class="current">$123.00</h6>
+                            <h6 class="last">$123.00</h6>
+                        </div>
+                    </div>
+                    <div class="cart-footer">
+                        <a href="#">
+                            <i class="fa-regular fa-eye"></i>View Details
+                        </a>
+                        <a href="#">
+                            <i class="fa-solid fa-cart-shopping"></i>Add to Cart
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="wid-25 arrange-left">
+                <div class="cart">
+                    <div class="cart-image">
+                        <img src="tranding1.webp">
+                    </div>
+                    <div class="card-details">
+                        <h6 class="style">Colorful Cloth</h6>
+                        <div class="cloth-price">
+                            <h6 class="current">$123.00</h6>
+                            <h6 class="last">$123.00</h6>
+                        </div>
+                    </div>
+                    <div class="cart-footer">
+                        <a href="#">
+                            <i class="fa-regular fa-eye"></i>View Details
+                        </a>
+                        <a href="#">
+                            <i class="fa-solid fa-cart-shopping"></i>Add to Cart
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="wid-25 arrange-left">
+                <div class="cart">
+                    <div class="cart-image">
+                        <img src="tranding.webp">
+                    </div>
+                    <div class="card-details">
+                        <h6 class="style">Colorful Cloth</h6>
+                        <div class="cloth-price">
+                            <h6 class="current">$123.00</h6>
+                            <h6 class="last">$123.00</h6>
+                        </div>
+                    </div>
+                    <div class="cart-footer">
+                        <a href="#">
+                            <i class="fa-regular fa-eye"></i>View Details
+                        </a>
+                        <a href="#">
+                            <i class="fa-solid fa-cart-shopping"></i>Add to Cart
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="wrapper next-row">
+            <div class="stay-updated">
+                <h1>Stay Updated</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt aliquam quo facere! Perspiciatis
+                    mollitia, natus ratione!</p>
+                <div class="updated-inputs">
+                    <input type="text" class="email-updated" placeholder="Email Goes Here">
+                    <button>Subscription</button>
+                </div>
+            </div>
+        </div>
+        <div class="vendors">
+            <img src="download (1).png">
+            <img src="download.jpg">
+            <img src="download1.jpg">
+            <img src="download.png">
+            <img src="download2.avif">
+        </div>
+        <div class="wrapper next-row">
+            <div class="footer">
+                <div class="wid-25">
+                    <div class="logo">
+                        <h1><span>E</span><span>COM</span></h1>
+                    </div>
+                    <p class="footer-desc">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel animi reiciendis debitis
+                    </p>
+                    <ul class="content-list">
+                        <li><i class="fa-solid fa-location-dot"></i>123,Pardesipura INDORE</li>
+                        <li><i class="fa-solid fa-envelope"></i>prajwalgupta@.com</li>
+                        <li><i class="fa-solid fa-phone"></i>+913243535325</li>
+                    </ul>
+                </div>
+                <div class="wid-25 quick-links">
+                    <h3>Quick Links</h3>
+                    <ul>
+                        <li><i class="fa-solid fa-angle-right"></i><span>Home</span></li>
+                        <li><i class="fa-solid fa-angle-right"></i><span>Our Shop</span></li>
+                        <li><i class="fa-solid fa-angle-right"></i><span>Details</span></li>
+                        <li><i class="fa-solid fa-angle-right"></i><span>Product</span></li>
+                        <li><i class="fa-solid fa-angle-right"></i><span>Quality</span></li>
+                        <li><i class="fa-solid fa-angle-right"></i><span>Grocery</span></li>
+                        <li><i class="fa-solid fa-angle-right"></i><span>Makeup</span></li>
+
+
+                    </ul>
+                </div>
+                <div class="wid-25 quick-links">
+                    <h3>Quick Links</h3>
+                    <ul>
+                        <li><i class="fa-solid fa-angle-right"></i><span>Home</span></li>
+                        <li><i class="fa-solid fa-angle-right"></i><span>Our Shop</span></li>
+                        <li><i class="fa-solid fa-angle-right"></i><span>Details</span></li>
+                        <li><i class="fa-solid fa-angle-right"></i><span>Product</span></li>
+                        <li><i class="fa-solid fa-angle-right"></i><span>Quality</span></li>
+                        <li><i class="fa-solid fa-angle-right"></i><span>Grocery</span></li>
+                        <li><i class="fa-solid fa-angle-right"></i><span>Makeup</span></li>
+
+
+                    </ul>
+                </div>
+                <div class="wid-25">
+                    <h3>News Letter</h3>
+                    <input type="text" class="footer-input" placeholder="Enter Name">
+                    <input type="text" class="footer-input" placeholder="Enter Email">
+                    <button class="footer-button">Subscribe</button>
                 </div>
             </div>
         </div>
